[gd_scene load_steps=11 format=2]

[ext_resource path="res://objects/Object.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/Portal.gd" type="Script" id=2]
[ext_resource path="res://sprites/Green Portal Sprite Sheet.png" type="Texture" id=3]
[ext_resource path="res://sprites/Purple Portal Sprite Sheet.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 22.0

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 7, 0 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 7, 1 ) ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 7, 0 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 7, 1 ) ]
}

[node name="Portal" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="HitBox" parent="." index="0"]
position = Vector2( -0.397217, 4.76655 )
shape = SubResource( 1 )

[node name="SpawnDetectorShape" parent="SpawnDetector" index="0"]
position = Vector2( -0.397217, 5.16378 )
shape = SubResource( 2 )

[node name="SpritePurple" type="Sprite" parent="." index="3"]
visible = false
texture = ExtResource( 4 )
vframes = 3
hframes = 8
frame = 6
region_rect = Rect2( 0, 0, 512, 64 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpritePurple" index="0"]
anims/portal_loop = SubResource( 3 )
anims/portal_spawn = SubResource( 4 )

[node name="SpriteGreen" type="Sprite" parent="." index="4"]
visible = false
texture = ExtResource( 3 )
vframes = 3
hframes = 8
frame = 5
region_rect = Rect2( 0, 0, 512, 64 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpriteGreen" index="0"]
anims/portal_loop = SubResource( 5 )
anims/portal_spawn = SubResource( 6 )
[connection signal="area_entered" from="." to="." method="_on_Portal_area_entered"]
